fix: adjust generated variables spacing

--- a/src/css/variables/typography.scss
+++ b/src/css/variables/typography.scss
@@ -2,10 +2,8 @@
     /**
      * Typography - Font family variables
      */
-    --font-family-primary-base: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans,
-        Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
-    --font-family-primary-monospace: 'SFMono-Regular', Menlo, Monaco, Consolas, 'Liberation Mono',
-        'Courier New', monospace;
+    --font-family-primary-base: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+    --font-family-primary-monospace: 'SFMono-Regular', Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;
     --font-family-primary-print: 'Georgia', 'Times New Roman', 'Times', serif;
     --font-family-secondary-base: var(--font-family-primary-base);
     --font-family-secondary-monospace: var(--font-family-primary-monospace);
